namespace java com.drink.srv.support

/**
* Exception
*/
exception SrvException {
  1: i32 code,
  2: string msg,
  3: string data
}
